@@ -1,0 +1,6 @@
+#if defined(_ENABLE_TESTS) || ! defined(RM_INTERN)
+  #include_next <sys/types.h>
+#else
+  /* Empty.  */
+#endif
+
